updated people page and json

--- a/events.html
+++ b/events.html
@@ -13,7 +13,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,400;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">
 
   <!-- Fontawesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous"
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="css/styles.css">
 
 
-  <title>Technologists</title>
+  <title>Technologists @ ND</title>
 </head>
 
 <body id="top">
@@ -40,34 +40,34 @@
 
   <div class="container p-5">
 
-      <p class="display-4 mt-2 chocolate"><strong>Calendar</strong></p>
+    <p class="display-4 mt-2 chocolate"><strong>Calendar</strong></p>
 
-      <ul class="list-group">
-	<a href="#" class="list-group-item list-group-item-action">
-		<div class="d-flex w-100 justify-content-between">
-			<h5 class="mb-1">List Group Item Header</h5>
-			<small>Today</small>
-		</div>
-		<p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-		<small>Donec id elit non mi porta.</small>
-	</a>
-	<a href="#" class="list-group-item list-group-item-action">
-		<div class="d-flex w-100 justify-content-between">
-			<h5 class="mb-1">List Group Item Header</h5>
-			<small>Today</small>
-		</div>
-		<p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-		<small>Donec id elit non mi porta.</small>
-	</a>
-	<a href="#" class="list-group-item list-group-item-action">
-		<div class="d-flex w-100 justify-content-between">
-			<h5 class="mb-1">List Group Item Header</h5>
-			<small>Today</small>
-		</div>
-		<p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-		<small>Donec id elit non mi porta.</small>
-	</a>
-</ul>
+    <ul class="list-group">
+      <a href="#" class="list-group-item list-group-item-action">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1">List Group Item Header</h5>
+          <small>Today</small>
+        </div>
+        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+        <small>Donec id elit non mi porta.</small>
+      </a>
+      <a href="#" class="list-group-item list-group-item-action">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1">List Group Item Header</h5>
+          <small>Today</small>
+        </div>
+        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+        <small>Donec id elit non mi porta.</small>
+      </a>
+      <a href="#" class="list-group-item list-group-item-action">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1">List Group Item Header</h5>
+          <small>Today</small>
+        </div>
+        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+        <small>Donec id elit non mi porta.</small>
+      </a>
+    </ul>
 
 
 
