--- a/spaces.html
+++ b/spaces.html
@@ -13,7 +13,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,400;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">
 
   <!-- Fontawesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous"
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="css/styles.css">
 
 
-  <title>Technologists</title>
+  <title>Technologists @ ND</title>
 </head>
 
 <body id="top">
@@ -80,11 +80,10 @@
     });
 
     // Location buttons checkmark
-    $("#location-buttons").on("click", ".btn", function(){
+    $("#location-buttons").on("click", ".btn", function() {
       $("#location-buttons .btn").removeClass("active");
       $(this).addClass("active");
     });
-
   </script>
 
 </body>
