--- a/technologies.html
+++ b/technologies.html
@@ -13,7 +13,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,400;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">
 
   <!-- Fontawesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous"
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="css/styles.css">
 
 
-  <title>Technologists</title>
+  <title>Technologists @ ND</title>
 </head>
 
 <body id="top">
@@ -40,44 +40,44 @@
 
   <div class="container p-5">
 
-      <p class="display-4 mt-2 chocolate"><strong>Who we are</strong></p>
-      <p class="text-larger"><strong class="trench-blue">The Technologists</strong> is an informal group established to gather people from across campus working at the nexus of technology and instruction. We meet several times during the yer to share
-        relevant campus
-        news, resources,
-        and updates on projects which might benefit from fellowship and the sharing of resources.
-      </p>
-      <div class="row mt-10">
-        <div class="col-sm-6 col-md-4">
-          <div class="card"><img src="img/img1.jpg" class="card-img-top" alt="...">
-            <div class="card-body ">
-              <h4><strong class="trench-blue">Resources</strong></h4>
-              <p>Learn to navigate the web of resources on and off campus, including roles, spaces and places, and technologies</p>
+    <p class="display-4 mt-2 chocolate"><strong>Who we are</strong></p>
+    <p class="text-larger"><strong class="trench-blue">The Technologists</strong> is an informal group established to gather people from across campus working at the nexus of technology and instruction. We meet several times during the yer to share
+      relevant campus
+      news, resources,
+      and updates on projects which might benefit from fellowship and the sharing of resources.
+    </p>
+    <div class="row mt-10">
+      <div class="col-sm-6 col-md-4">
+        <div class="card"><img src="img/img1.jpg" class="card-img-top" alt="...">
+          <div class="card-body ">
+            <h4><strong class="trench-blue">Resources</strong></h4>
+            <p>Learn to navigate the web of resources on and off campus, including roles, spaces and places, and technologies</p>
 
-              <p class="mt-4 text-center"><a type="button" class="btn btn-primary text-light"><i class="fa-solid fa-eye fa-fw mr-2"></i>View</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <div class="card"><img src="img/img2.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h4><strong class="trench-blue">People</strong></h4>
-              <p>Discover opportunities for working together and exploring how your projects might impact or benefit others' projects</p>
-
-              <p class="mt-4 text-center"><a type="button" class="btn btn-primary text-light"><i class="fa-solid fa-eye fa-fw mr-2"></i>View</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <div class="card"><img src="img/img3.jpg" class="card-img-top" alt="...">
-            <div class="card-body ">
-              <h4><strong class="trench-blue">Events</strong></h4>
-              <p>Build a strong community of folks through food and fellowship, including lunches, resource tours, and other events</p>
-
-              <p class="mt-4 text-center"><a type="button" class="btn btn-primary text-light"><i class="fa-solid fa-eye fa-fw mr-2"></i>View</a></p>
-            </div>
+            <p class="mt-4 text-center"><a type="button" class="btn btn-primary text-light"><i class="fa-solid fa-eye fa-fw mr-2"></i>View</a></p>
           </div>
         </div>
       </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="card"><img src="img/img2.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h4><strong class="trench-blue">People</strong></h4>
+            <p>Discover opportunities for working together and exploring how your projects might impact or benefit others' projects</p>
+
+            <p class="mt-4 text-center"><a type="button" class="btn btn-primary text-light"><i class="fa-solid fa-eye fa-fw mr-2"></i>View</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="card"><img src="img/img3.jpg" class="card-img-top" alt="...">
+          <div class="card-body ">
+            <h4><strong class="trench-blue">Events</strong></h4>
+            <p>Build a strong community of folks through food and fellowship, including lunches, resource tours, and other events</p>
+
+            <p class="mt-4 text-center"><a type="button" class="btn btn-primary text-light"><i class="fa-solid fa-eye fa-fw mr-2"></i>View</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
