--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="row mb-5">
       <div class="col-sm-6 col-md-4">
-        <div class="card border-0 shadow-sm"><img src="img/img1.jpg" class="card-img-top" alt="">
+        <div class="card border-0 shadow-sm"><img src="img/img1.JPG" class="card-img-top" alt="">
           <div class="card-body ">
             <h4><strong class="trench-blue">Share resources</strong></h4>
             <p>Learn to navigate the web of resources on and off campus, including roles, spaces and places, and technologies</p>
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
-        <div class="card border-0 shadow-sm"><img src="img/img2.jpg" class="card-img-top" alt="">
+        <div class="card border-0 shadow-sm"><img src="img/img2.JPG" class="card-img-top" alt="">
           <div class="card-body">
             <h4><strong class="trench-blue">Connect people</strong></h4>
             <p>Discover opportunities for working together and exploring how your projects might impact or benefit others' projects</p>
