working on adding data for people page

--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,10 @@
 <footer class="bg-secondary text-light pt-5 pb-2 px-5 mt-5">
 	<div class="row">
 		<div class="col-md-12">
-			<h2 class="mb-1">Technologists</h2>
+			<h2 class="mb-1">Technologists @ ND</h2>
 			<p class="mb-3">
 				<small>
-					<em>A Community of Practice for Technologists @ ND</em>
+					<em>A Community of Practice for Technologists at Notre Dame</em>
 				</small>
 			</p>
       <p>
