--- a/people.html
+++ b/people.html
@@ -40,14 +40,14 @@
 
   <div class="container mt-5">
 
-    <div class="col-sm-12">
-      <form id="search-box" class="shadow-sm">
+    <div class="col-sm-10 mx-0">
+      <form id="search-box" class="shadow-sm offset-sm-2">
         <div class="form-group">
           <div class="input-group border-0">
             <div class="input-group-prepend">
               <span class="input-group-text border-0"><i class="fa-solid fa-search fa-fw fa-2x silver"></i></span>
             </div>
-            <input type="text" class="form-control form-control-lg" aria-label="" name="brainstorm-search" id="search-input" placeholder="Search for ..."  autocomplete="off">
+            <input type="text" class="form-control form-control-lg" aria-label="" name="brainstorm-search" id="search-input" placeholder="Search for ..." autocomplete="off">
             <div class="input-group-append" id="search-refresh-button">
               <span class="input-group-text border-0"><i class="fa-solid fa-sync-alt opacity-half bright-blue fa-fw fa-2x pointer sm-del"></i></span>
             </div>
@@ -62,21 +62,22 @@
       <!-- Write the cards into the page -->
       <script id="all-the-people" type="text/template">
 
-<div class="row">
         {{#people}}
-          <div class="card-container col-sm-12 col-md-6 col-lg-4 mb-5">
+          <div class="card-container col-sm-12 col-md-4 mb-5">
             <div class="card shadow-sm border-0 {{{type}}}" data-url="{{{link}}}" data-target="{{target}}">
               <img src="{{headshot}}" class="card-img-top" alt="Photo of {{name}}">
               <div class="card-body" data-resource-type="{{{type}}}">
                 <h5 class="project-title"><a href="{{bio-link}}" target="{{bio-link-target}}">{{name}}</a></h5>
-                <p class="text-secondary">{{title}}<br>{{department}}</p>
+                <p class="text-secondary">{{title}}<br>{{department}}<br></p>
+                <p><a href="mailto:{{email}}"><i class="fa-solid fa-envelope mr-2"></i>{{email}}</a></p>
               </div>
-              <div class="card-footer bg-trench-blue text-light border-0">
-  <small>{{specializes}}</small>
-</div>
+              <div class="card-footer border-0">
+                {{specialties}}
+              </div>
             </div>
           </div>
         {{/people}}
+
       </script>
 
     </div>
